cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++14)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY ShellSort)
project(${LIBRARY} )
set(INCLUDE shell_lib/include/shell_sort.h)
set(SOURCE  shell_lib/src/shell_sort.cpp)
include_directories("shell_lib/include")
add_library(${CMAKE_PROJECT_NAME} STATIC ${INCLUDE} ${SOURCE})
add_subdirectory(sample)
add_subdirectory(test_generator)
add_subdirectory(checker)
